--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logtint",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Lightweight, isomorphic library that brings colors and style to your `console.log`",
   "type": "commonjs",
   "main": "./index.js",
@@ -11,7 +11,7 @@
     "build": "node buildscript/compile.mjs",
     "clean": "node buildscript/clean.mjs",
     "prepack": "npm run clean && npm run build",
-    "postversion": "git add -A src && git push && git push --tags"
+    "postversion": "git add -A ./ && git push && git push --tags"
   },
   "devDependencies": {
     "@types/node": "^22.15.17",
